--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,8 +2,12 @@
 
 body {
   font-family: "Nanum Pen Script", cursive;
+  width: 100%;
+  height: 100%;
 }
-
+* {
+  box-sizing: border-box;
+}
 .hiding {
   display: none;
 }
@@ -16,4 +20,60 @@ body {
   right: 0;
   z-index: -1;
   opacity: 0.5;
+}
+button {
+  background-color: RGB(255, 255, 255, 0);
+  border: none;
+  cursor: pointer;
+}
+input {
+  width: 300px;
+  height: 40px;
+  border-radius: 6px;
+  border: none;
+  background-color: rgba(174, 225, 255, 0.3);
+  font-size: 15px;
+  padding-left: 10px;
+}
+input:focus {
+  border-radius: 6px;
+  outline: none;
+  border: solid 1px grey;
+  opacity: 0.8;
+}
+.container {
+  width: 100%;
+  height: 100%;
+  margin-left: 70px;
+  margin-top: 60px;
+}
+#js-clock > h1 {
+  font-size: 4em;
+  margin: 0;
+}
+h3 {
+  font-size: 2em;
+}
+ul {
+  list-style: none;
+  padding-left: 0;
+  display: inline-block;
+  margin-right: 30px;
+}
+#greeting-form {
+  margin: 30px 0;
+}
+.list-container {
+  width: 500px;
+  display: flex;
+  justify-content: space-around;
+}
+.list-container .todo-list,
+.list-container .finish-list {
+  width: 300px;
+}
+li > span {
+  font-size: 24px;
+  font-weight: 400;
+  margin: 0 5px;
 }
