--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,6 +43,11 @@ input:focus {
 }
 .container {
   width: 100%;
+  display: flex;
+  align-items: center;
+}
+.container-todo {
+  width: 100%;
   height: 100%;
   margin-left: 70px;
   margin-top: 60px;
@@ -76,4 +81,27 @@ li > span {
   font-size: 24px;
   font-weight: 400;
   margin: 0 5px;
+}
+
+.container-calendar {
+  width: 50%;
+  height: 100%;
+  margin-right: 100px;
+  font-size: 2.5em;
+}
+@media (max-width: 1000px) {
+  .container {
+    display: block;
+  }
+  .container-todo {
+    float: none;
+    width: auto;
+  }
+  .container-calendar {
+    float: none;
+    width: auto;
+  }
+  .backImg {
+    height: max-content;
+  }
 }
