--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,6 +89,15 @@ li > span {
   margin-right: 100px;
   font-size: 2.5em;
 }
+label {
+  cursor: pointer;
+}
+.sun {
+  color: red;
+}
+.sat {
+  color: blue;
+}
 @media (max-width: 1000px) {
   .container {
     display: block;
