--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,9 +45,9 @@ input:focus {
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 .container-todo {
-  width: 100%;
   height: 100%;
   margin-left: 70px;
   margin-top: 60px;
@@ -84,10 +84,13 @@ li > span {
 }
 
 .container-calendar {
-  width: 50%;
   height: 100%;
   margin-right: 100px;
+  margin-top: 40px;
   font-size: 2.5em;
+}
+.calendar-btn {
+  margin-bottom: 30px;
 }
 label {
   cursor: pointer;
@@ -109,6 +112,8 @@ label {
   .container-calendar {
     float: none;
     width: auto;
+    margin-top: 20px;
+    margin-left: 70px;
   }
   .backImg {
     height: max-content;
