--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,9 @@ body {
   font-family: "Nanum Pen Script", cursive;
   width: 100%;
   height: 100%;
+  margin: 0;
+  /* background-repeat: no-repeat;
+  background-size: cover; */
 }
 * {
   box-sizing: border-box;
@@ -42,7 +45,6 @@ input:focus {
   opacity: 0.8;
 }
 .container {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -116,6 +118,7 @@ label {
     margin-left: 70px;
   }
   .backImg {
-    height: max-content;
+    max-width: 100%;
+    height: 130%;
   }
 }
